# ct-iprd

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
benchmarks/: CMakeLists.txt  bench_index.cpp  bench_map.cpp
devtools/cmake/: Conan.cmake
examples/: CMakeLists.txt
examples/2d_double_well/: 2d_double_well.cpp  2d_double_well_module.cpp  CMakeLists.txt
examples/lotka_volterra/: CMakeLists.txt  lotka_volterra.cpp
examples/lotka_volterra_2d/: CMakeLists.txt  lotka_volterra_2d.cpp
examples/lotka_volterra_3d/: CMakeLists.txt  lotka_volterra_3d.cpp
examples/michaelis_menten/: CMakeLists.txt  michaelis_menten.cpp
include/ctiprd/: ContainerContainer.h  NeighborList.h  ParticleCollection.h  ParticleTypes.h  any.h  config.h  ctiprd.h  progressbar.hpp  vec.h
include/ctiprd/binding/: system_bindings.h  trajectory.h
include/ctiprd/cpu/: ContainerContainer.h  ForceField.h  NeighborList.h  ParticleCollection.h  PrefixSum.h  RadixNeighborList.h  UncontrolledApproximation.h  forces.h  reactions.h
include/ctiprd/cpu/integrators/: EulerMaruyama.h
include/ctiprd/cuda/: CellLinkedList.h  PrefixSum.h  util.cuh
include/ctiprd/geometry/: box.h
include/ctiprd/integrators/: EulerMaruyama.h
include/ctiprd/potentials/: ForceField.h  external.h  interaction.h  util.h
include/ctiprd/reactions/: UncontrolledApproximation.h  basic.h  doi.h
include/ctiprd/systems/: double_well.h  lotka_volterra.h  michaelis_menten.h  util.h
include/ctiprd/thread/: bsho.h  ctpl.h  ops.h  utils.h
include/ctiprd/util/: Index.h  distribution_utils.h  hash.h  ops.h  pbc.h  rates.h
tests/: CMakeLists.txt  catch_main.cpp  test_cuda.cpp  test_forward_backward_map.cpp  test_index.cpp  test_integration.cpp  test_michaelis_menten.cpp  test_neighbor_list.cpp  test_particle_collection.cpp  test_prefix_sum_par.cpp  test_reactions.cpp  test_reactions_map.cpp  test_sanity.cpp  test_system.cpp  test_thread_pool.cpp
